--- a/solution/index.html
+++ b/solution/index.html
@@ -47,7 +47,7 @@
 </header>
 
         <div id="main-content" class="container">
-            <h2 id="menu-categories-title" class="text-center">Our Menu</h2>
+            <h2 class="text-center">Our Menu</h2>
         </div>
 
         <section class="row">
